# kanpan

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  ai.ts  aiStore.ts  alerts.ts  api.ts  format.ts  glossary.ts  hooks.ts  index.css  main.tsx  notify.ts  realtime.ts  store.ts  sync.ts  theme.ts  types.ts  update.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alerts.rs  cache.rs  commands.rs  error.rs  gsync.rs  indicators.rs  lib.rs  main.rs  models.rs
src-tauri/src/providers/: finmind.rs  fugle.rs  mod.rs
src/components/: AiAnalysisPanel.tsx  AlertEngine.tsx  AlertsModal.tsx  ChartPanel.tsx  CompareView.tsx  DashboardGrid.tsx  IndicatorsPanel.tsx  InfoTip.tsx  InstitutionalPanel.tsx  IntradayChart.tsx  OrderBook.tsx  PriceChart.tsx  PriceHeader.tsx  SearchBar.tsx  Settings.tsx  StockCard.tsx  StockDetail.tsx  TableView.tsx  TrendChart.tsx  UpdateBanner.tsx  ValuationPanel.tsx  Watchlist.tsx  icons.tsx
